[gd_scene load_steps=107 format=3 uid="uid://dgokq5t7p0bo0"]

[ext_resource type="Script" uid="uid://dll6ou6jw6nyj" path="res://scripts/character.gd" id="1_g2els"]
[ext_resource type="Script" uid="uid://c7pnjsuslixmb" path="res://scripts/camera.gd" id="3_dqkch"]
[ext_resource type="Texture2D" uid="uid://bo6bfwweusmb2" path="res://assets/Adventure/char_spritesheet.png" id="5_qlg0r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qhqgy"]
bg_color = Color(0.252028, 0.252028, 0.252028, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqkch"]
bg_color = Color(0.120604, 0.716859, 0.323312, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lrhn5"]
bg_color = Color(0.210568, 0.637123, 0.899311, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="AtlasTexture" id="AtlasTexture_my7n2"]
atlas = ExtResource("5_qlg0r")
region = Rect2(0, 200, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp8ca"]
atlas = ExtResource("5_qlg0r")
region = Rect2(48, 200, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lw5n"]
atlas = ExtResource("5_qlg0r")
region = Rect2(96, 200, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cgup"]
atlas = ExtResource("5_qlg0r")
region = Rect2(144, 200, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5ia6"]
atlas = ExtResource("5_qlg0r")
region = Rect2(192, 200, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dpix"]
atlas = ExtResource("5_qlg0r")
region = Rect2(240, 200, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hyy3"]
atlas = ExtResource("5_qlg0r")
region = Rect2(0, 280, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irmqu"]
atlas = ExtResource("5_qlg0r")
region = Rect2(48, 280, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eonc"]
atlas = ExtResource("5_qlg0r")
region = Rect2(96, 280, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_50cep"]
atlas = ExtResource("5_qlg0r")
region = Rect2(144, 280, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yvht"]
atlas = ExtResource("5_qlg0r")
region = Rect2(192, 280, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lagn4"]
atlas = ExtResource("5_qlg0r")
region = Rect2(240, 280, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8k1v"]
atlas = ExtResource("5_qlg0r")
region = Rect2(0, 328, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih8y6"]
atlas = ExtResource("5_qlg0r")
region = Rect2(48, 328, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbud2"]
atlas = ExtResource("5_qlg0r")
region = Rect2(96, 328, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vovfy"]
atlas = ExtResource("5_qlg0r")
region = Rect2(144, 328, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0pwc"]
atlas = ExtResource("5_qlg0r")
region = Rect2(192, 328, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cicko"]
atlas = ExtResource("5_qlg0r")
region = Rect2(240, 328, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj47h"]
atlas = ExtResource("5_qlg0r")
region = Rect2(0, 248, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lh0q"]
atlas = ExtResource("5_qlg0r")
region = Rect2(48, 248, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qyni"]
atlas = ExtResource("5_qlg0r")
region = Rect2(96, 248, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sougf"]
atlas = ExtResource("5_qlg0r")
region = Rect2(144, 248, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p478o"]
atlas = ExtResource("5_qlg0r")
region = Rect2(192, 248, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y1m1"]
atlas = ExtResource("5_qlg0r")
region = Rect2(240, 248, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("5_qlg0r")
region = Rect2(304, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("5_qlg0r")
region = Rect2(320, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("5_qlg0r")
region = Rect2(336, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("5_qlg0r")
region = Rect2(352, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("5_qlg0r")
region = Rect2(368, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("5_qlg0r")
region = Rect2(384, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("5_qlg0r")
region = Rect2(304, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("5_qlg0r")
region = Rect2(320, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("5_qlg0r")
region = Rect2(336, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("5_qlg0r")
region = Rect2(352, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("5_qlg0r")
region = Rect2(368, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("5_qlg0r")
region = Rect2(384, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("5_qlg0r")
region = Rect2(304, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("5_qlg0r")
region = Rect2(320, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("5_qlg0r")
region = Rect2(336, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("5_qlg0r")
region = Rect2(352, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w11d"]
atlas = ExtResource("5_qlg0r")
region = Rect2(368, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_770dr"]
atlas = ExtResource("5_qlg0r")
region = Rect2(384, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1cb"]
atlas = ExtResource("5_qlg0r")
region = Rect2(304, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdulj"]
atlas = ExtResource("5_qlg0r")
region = Rect2(320, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vau08"]
atlas = ExtResource("5_qlg0r")
region = Rect2(336, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsb7e"]
atlas = ExtResource("5_qlg0r")
region = Rect2(352, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjsmb"]
atlas = ExtResource("5_qlg0r")
region = Rect2(368, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwp2n"]
atlas = ExtResource("5_qlg0r")
region = Rect2(384, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("5_qlg0r")
region = Rect2(128, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("5_qlg0r")
region = Rect2(144, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("5_qlg0r")
region = Rect2(160, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("5_qlg0r")
region = Rect2(176, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("5_qlg0r")
region = Rect2(192, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("5_qlg0r")
region = Rect2(208, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("5_qlg0r")
region = Rect2(128, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("5_qlg0r")
region = Rect2(144, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("5_qlg0r")
region = Rect2(160, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("5_qlg0r")
region = Rect2(176, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("5_qlg0r")
region = Rect2(192, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("5_qlg0r")
region = Rect2(208, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("5_qlg0r")
region = Rect2(128, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("5_qlg0r")
region = Rect2(144, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("5_qlg0r")
region = Rect2(160, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("5_qlg0r")
region = Rect2(176, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("5_qlg0r")
region = Rect2(192, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("5_qlg0r")
region = Rect2(208, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("5_qlg0r")
region = Rect2(128, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("5_qlg0r")
region = Rect2(144, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("5_qlg0r")
region = Rect2(160, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("5_qlg0r")
region = Rect2(176, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("5_qlg0r")
region = Rect2(192, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("5_qlg0r")
region = Rect2(208, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("5_qlg0r")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("5_qlg0r")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("5_qlg0r")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("5_qlg0r")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("5_qlg0r")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("5_qlg0r")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("5_qlg0r")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("5_qlg0r")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("5_qlg0r")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlsd"]
atlas = ExtResource("5_qlg0r")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("5_qlg0r")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("5_qlg0r")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_74r1k"]
atlas = ExtResource("5_qlg0r")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8svfe"]
atlas = ExtResource("5_qlg0r")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a3c5"]
atlas = ExtResource("5_qlg0r")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_42b1b"]
atlas = ExtResource("5_qlg0r")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ic4"]
atlas = ExtResource("5_qlg0r")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_au7lq"]
atlas = ExtResource("5_qlg0r")
region = Rect2(96, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nubpm"]
atlas = ExtResource("5_qlg0r")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua5cf"]
atlas = ExtResource("5_qlg0r")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ujp"]
atlas = ExtResource("5_qlg0r")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk41t"]
atlas = ExtResource("5_qlg0r")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuw3a"]
atlas = ExtResource("5_qlg0r")
region = Rect2(80, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8txt3"]
atlas = ExtResource("5_qlg0r")
region = Rect2(96, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2w11d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_my7n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp8ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lw5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cgup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5ia6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dpix")
}],
"loop": false,
"name": &"attack_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hyy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irmqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eonc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50cep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yvht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lagn4")
}],
"loop": false,
"name": &"attack_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8k1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih8y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbud2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vovfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0pwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cicko")
}],
"loop": false,
"name": &"attack_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj47h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lh0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qyni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sougf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p478o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y1m1")
}],
"loop": false,
"name": &"attack_up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}],
"loop": false,
"name": &"dash_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": false,
"name": &"dash_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w11d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_770dr")
}],
"loop": false,
"name": &"dash_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f1cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdulj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vau08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsb7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjsmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwp2n")
}],
"loop": false,
"name": &"dash_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}],
"loop": true,
"name": &"move_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8svfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a3c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42b1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ic4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au7lq")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nubpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua5cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ujp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk41t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuw3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8txt3")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rkhd4"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qhqgy"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_my7n2"]
radius = 19.0

[node name="Character" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 41
motion_mode = 1
script = ExtResource("1_g2els")

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 3
offset_left = -11.0
offset_top = -18.0
offset_right = 11.0
offset_bottom = -14.0
theme_override_styles/background = SubResource("StyleBoxFlat_qhqgy")
theme_override_styles/fill = SubResource("StyleBoxFlat_dqkch")
value = 50.0
show_percentage = false

[node name="ExperienceProgressBar" type="ProgressBar" parent="."]
z_index = 3
offset_left = -11.0
offset_top = -23.0
offset_right = 11.0
offset_bottom = -19.0
theme_override_styles/background = SubResource("StyleBoxFlat_qhqgy")
theme_override_styles/fill = SubResource("StyleBoxFlat_lrhn5")
value = 50.0
show_percentage = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
sprite_frames = SubResource("SpriteFrames_2w11d")
animation = &"attack_down"
speed_scale = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_rkhd4")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
process_callback = 0
editor_draw_screen = false
script = ExtResource("3_dqkch")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_qhqgy")

[node name="MeleeBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeBox"]
shape = SubResource("CircleShape2D_my7n2")
